[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nyrkiov3"
version = "0.0.1"
description = "Nyrkiö v3: benchmark ingest, change detection, and query service."
# Target CPython 3.14. The service uses background threads to parse
# benchmark logs in parallel (`concurrent.futures.ThreadPoolExecutor`);
# on the free-threaded ("no-GIL") build of 3.14 those threads actually
# execute concurrently. Python 3.14 is a hard requirement — nothing
# above will work on older interpreters.
requires-python = ">=3.14"
dependencies = [
    "jsonee",
    "purejson",
    "extjson",
    "benchzoo",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "httpx>=0.27", "uvicorn"]

[project.scripts]
nyrkio-sync = "nyrkiov3.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
