[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nyrkiov3"
version = "0.0.1"
description = "Nyrkiö v3: benchmark ingest, change detection, and query service."
# Target CPython 3.14. The service uses background threads to parse
# benchmark logs in parallel (`concurrent.futures.ThreadPoolExecutor`);
# on the free-threaded ("no-GIL") build of 3.14 those threads actually
# execute concurrently. Python 3.14 is a hard requirement — nothing
# above will work on older interpreters.
requires-python = ">=3.14"
dependencies = [
    "jsonee",
    "purejson",
    "extjson",
    "benchzoo",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "httpx>=0.27", "uvicorn"]

# Sibling-checkout layout: nyrkiov3 expects PureJson, ExtendedJsonSchema,
# JsonEE, and benchzoo cloned next to it (e.g. /opt/nyrkio-v3/{nyrkiov3,
# PureJson, ExtendedJsonSchema, JsonEE, benchzoo}). uv installs them in
# editable mode so a `git pull` in any of them is picked up without
# re-running `uv sync`.
[tool.uv.sources]
purejson = { path = "../PureJson", editable = true }
extjson  = { path = "../ExtendedJsonSchema", editable = true }
jsonee   = { path = "../JsonEE", editable = true }
benchzoo = { path = "../benchzoo", editable = true }

[project.scripts]
nyrkio-sync = "nyrkiov3.cli:main"
nyrkio-serve = "nyrkiov3.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
