[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nyrkiov3"
version = "0.0.1"
description = "Nyrkiö v3: benchmark ingest, change detection, and query service."
# Target CPython 3.14. The service uses background threads to parse
# benchmark logs in parallel (`concurrent.futures.ThreadPoolExecutor`);
# on the free-threaded ("no-GIL") build of 3.14 those threads actually
# execute concurrently. Python 3.14 is a hard requirement — nothing
# above will work on older interpreters.
requires-python = ">=3.14"
dependencies = [
    "jsonee",
    "purejson",
    "extjson",
    "benchzoo",
    # uvicorn is the runtime ASGI server — production needs it, so
    # it's a direct dep, not dev-only.
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "httpx>=0.27"]

# The four backing libraries aren't on PyPI; pull each from GitHub.
# uv resolves the latest commit on `main` at sync time and pins it in
# uv.lock, so deployments are reproducible. For local development with
# editable sibling checkouts, override these entries in `uv.toml` (the
# user-level / project-local config takes precedence over pyproject).
[tool.uv.sources]
purejson = { git = "https://github.com/nyrkio/purejson", branch = "main" }
extjson  = { git = "https://github.com/nyrkio/extjson",  branch = "main" }
jsonee   = { git = "https://github.com/nyrkio/jsonee",   branch = "main" }
benchzoo = { git = "https://github.com/nyrkio/benchzoo", branch = "main" }

[project.scripts]
nyrkio-sync = "nyrkiov3.cli:main"
nyrkio-serve = "nyrkiov3.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
